<resources>
    <string name="app_name">C0765767_F2019_MAD3125_MidTerm</string>
    <string name="sin_number">Sin Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="gross_income">Gross Income</string>
    <string name="rrsp_contributed">RRSP Contributed</string>
    <string name="full_name">Full Name</string>
    <string name="textview">TextView</string>
    <string name="age">Age</string>
    <string name="date_of_tax">Date Of Tax</string>
    <string name="federal_tax">Federal Tax</string>
    <string name="provincial_tax">Provincial Tax</string>
    <string name="cpp">CPP</string>
    <string name="ei">EI</string>
    <string name="carry_forward_rrsp">Carry Forward RRSP</string>
    <string name="taxable_income">Taxable Income</string>
    <string name="total_tax_paid">Total Tax Paid</string>
    <string name="tax_filing_date">Tax Filing Date</string>
</resources>
